--- a/Other/Incentive_Compatible_Logistic_Regression.tex
+++ b/Other/Incentive_Compatible_Logistic_Regression.tex
@@ -167,9 +167,50 @@ A learner (algorithm) is incentive compatible if there does not exist a dataset 
 \newline \newline\end{df}
 \begin{prop} \label{prop:logit} 
 Multi-class logistic regression is not incentive compatible.
-\end{prop}
+\newline \newline\end{prop}
+
+\begin{figure}[H] \centering \begin{tikzpicture} [scale = 1] 
+\draw[thick] (-4.0, 0.0) -- (4.0, 0.0);
+\draw[fill = green, thick] (-1.8, 0.1) circle [radius = 0.1];
+\draw[fill = green, thick] (-1.8, 0.3) circle [radius = 0.1];
+\draw[fill = green, thick] (-1.8, 0.5) circle [radius = 0.1];
+\node[green, below right] at (-1.8, -0.1){-$0.49$};
+\draw[fill = red, thick] (-2.2, 0.1) circle [radius = 0.1];
+\draw[fill = red, thick] (-2.2, 0.3) circle [radius = 0.1];
+\draw[fill = red, thick] (-2.2, 0.5) circle [radius = 0.1];
+\node[red, below left] at (-2.2, -0.1){-$0.51$};
+\draw[fill = green, thick] (-2.4, 0.4) rectangle (-2.6, 0.2);
+\node[green, above left] at (-2.5, 0.5){-$0.53$};
+\draw[fill = blue, thick] (3.0, 0.1) circle [radius = 0.1];
+\draw[fill = blue, thick] (3.0, 0.3) circle [radius = 0.1];
+\draw[fill = blue, thick] (3.0, 0.5) circle [radius = 0.1];
+\node[blue, below] at (3.0, -0.1){$1$};
+\end{tikzpicture} \captionof{figure}{Second Incentive Incompatible Example}\label{fig:sice}
+\end{figure}
 \begin{proof} \label{proof:logitpf} 
-The example described in Figure \ref{fig:ice} is a dataset that is incentive incompatible.
+The simplest numerical example we found is the dataset with $10$ points $\left\{\left(x_{i}, y_{i}\right)\right\}_{i=1}^{10} = \left\{\left(-0.53, 2\right), \left(-0.51, 1\right), \left(-0.51, 1\right), \left(-0.51, 1\right), \left(-0.49, 2\right), \left(-0.49, 2\right), \left(-0.49, 2\right), \left(1, 3\right), \left(1, 3\right), \left(1, 3\right)\right\}$. It has a similar structure as the data set shown in Figure \ref{fig:ice} in that multiple points are close to a classification boundary, and the one point on the "incorrect" side of the boundary has the incentive to pretend to be the third class.
+\\* In this example, agent $i $ reports $x_{i} \in \mathbb{R}^{2}$ and $y_{i}$ is one of $1$ (red), $2$ (green), or $3$ (blue). Suppose the green square point correspond to agent $1$ with $x_{1} = \left(-0.53, 2\right)$ and $y_{1} = 2$.
+\begin{align*}
+\mathbb{P}\left\{Y = 1 | w^\star , x_{1}\right\} &= 0.2715,
+\\ \mathbb{P}\left\{Y = 1 | w^\star \left(y^{\dagger}_{1} = 3\right), x_{1}\right\} &= 0.3709.
+\end{align*}
+Here, $w^\star $ is given by, with class $1$ weights normalized to $0$,
+
+\begin{center} \begin{tabular}{|c|c|c|c|}
+\hline
+ Class &(Intercept) &x1\\ \hline
+$2$ &$25.73034$ &$50.40985$\\ \hline
+$3$ &$21.77434$ &$63.65515$\\ \hline
+\end{tabular} \end{center}
+and $w^\star \left(y^{\dagger}_{1} = 3\right)$ is given by,
+
+\begin{center} \begin{tabular}{|c|c|c|c|}
+\hline
+ Class &(Intercept) &x1\\ \hline
+$2$ &$6.603135$ &$13.09844$\\ \hline
+$3$ &$8.231013$ &$18.48809$\\ \hline
+\end{tabular} \end{center}
+The example described in Figure \ref{fig:ice} is a dataset that is also incentive incompatible.
 \\* In this example, agent $i $ reports $x_{i} \in \mathbb{R}^{2}$ and $y_{i}$ is one of $1$ (red), $2$ (green), or $3$ (blue). Suppose the red square point correspond to agent $1$ with $x_{1} = \left(-1.63, -1.17\right)$ and $y_{1} = 1$.
 \begin{align*}
 \mathbb{P}\left\{Y = 1 | w^\star , x_{1}\right\} &= 0.3290,
@@ -191,11 +232,12 @@ and $w^\star \left(y^{\dagger}_{1} = 3\right)$ is given by,
 $2$ &-$0.1915645$ &$3.473426$ &-$5.507418$\\ \hline
 $3$ &$0.8273350$ &$4.309293$ &-$1.200060$\\ \hline
 \end{tabular} \end{center}
+\end{proof}
 
 
 \subsection{Zero-One Loss Logistic Regression}
 It is, however, possible to change the loss function so that logistic regression is incentive compatible. Changing the loss function to absolute value $L^{1}$ loss is one possibility, due to \citet*{dekel2010incentive}. Their result on incentive compatibility of empirical risk minimization in the regression setting is applicable in our model. In addition to absolute value loss, which is not a meaningful loss function for multi-class logistic regression, zero-one loss logistic regression with deterministic predictions is also incentive compatible.
-\newline \newline\end{proof}
+\newline \newline
 \begin{prop} \label{prop:zolog} 
 Multi-class deterministic classifiers estimated by empirical risk minimization with zero-one loss is incentive compatible.
 \end{prop}
