--- a/Other/Incentive_Compatible_Logistic_Regression.tex
+++ b/Other/Incentive_Compatible_Logistic_Regression.tex
@@ -403,14 +403,22 @@ Consider the three-class $1D$ threshold classifiers in the form,
 2& \text{\;if\;} -t \leq  x \leq  t \\
 3& \text{\;if\;} x > t \\
 \end{array}\right. \]
-\begin{align*}
-\ell\left(x_{i}, y_{i}; t\right) &= \left(x_{i} - t\right)^{2} \mathbbm{1}_{\hat{y}\left(x_{i}; t\right) \neq  y_{i}}.
-\end{align*}
-Then, the maximization problem is,
+This is effectively a one-vs-one threshold classifier with the $1$-vs-$2$ threshold of $-t $, with the $2$-vs-$3$ threshold of $t $ and the $1$-vs-$3$ threshold of any value between $-t $ and $t $. Now define the loss function as the error margin,
+\[ \ell\left(x_{i}, y_{i}; t\right) =\left\{ \begin{array}{ll}
+\left(x_{i} - \left(-t\right)\right)^{2} \mathbbm{1}_{\hat{y}\left(x_{i}; t\right) \neq  y_{i}}& \text{\;if\;} y_{i} = 1 \\
+\displaystyle\min\left\{\left(x_{i} - \left(-t\right)\right)^{2}, \left(x_{i} - t\right)^{2}\right\} \mathbbm{1}_{\hat{y}\left(x_{i}; t\right) \neq  y_{i}}& \text{\;if\;} y_{i} = 2 \\
+\left(x_{i} - t\right)^{2} \mathbbm{1}_{\hat{y}\left(x_{i}; t\right) \neq  y_{i}}& \text{\;if\;} y_{i} = 3 \\
+\end{array}\right. \]
+Then, the learner's maximization problem is,
 \begin{align*}
 &\displaystyle\min_{t \in \mathbb{R}} \ell\left(x_{i}, y_{i}; t\right).
 \end{align*}
-For the dataset $\left\{\left(x_{i}, y_{i}\right)\right\}_{i=1}^{5} = \left\{\left(-4, 1\right), \left(-3, 2\right), \left(-2, 1\right), \left(3, 2\right), \left(4, 3\right)\right\}$, the minimum loss is $1$ and it occurs when $t  = 3$ when every agent reports truthfully. In this case, agent (-$2, 1$) is misclassified as (-$2, 2$). However, if (-$2, 1$) misreports as (-$2, 3$), the loss from $t  = 3$ is $25$ and the minimum loss is $22$ and it occurs when $t  = 0$. In this case, agent (-$2, 1$) is classified correctly.
+The agents' problem is to minimize the loss for their point with their true label. The loss can be either the margin loss or zero-one loss, here, for simplicity, assume the agents also want to minimize the margin,
+\begin{align*}
+&\displaystyle\max_{y^{\dagger}_{i} \in \left\{1, 2, 3\right\}} \ell\left(x_{i}, y_{i}; t^\star \left(y^{\dagger}_{i}\right)\right),
+\end{align*}
+where $t^\star \left(y^{\dagger}_{i}\right)$ is the optimal threshold $t $ for the learner when agent $i $ misreports the label as $y^{\dagger}_{i.}$
+\\* For the dataset $\left\{\left(x_{i}, y_{i}\right)\right\}_{i=1}^{5} = \left\{\left(-4, 1\right), \left(-3, 2\right), \left(-2, 1\right), \left(3, 2\right), \left(4, 3\right)\right\}$, the minimum loss is $1$ and it occurs when $t  = 3$ when every agent reports truthfully. In this case, agent (-$2, 1$) is misclassified as (-$2, 2$). However, if (-$2, 1$) misreports as (-$2, 3$), the loss from $t  = 3$ is $25$ and the minimum loss is $22$ and it occurs when $t  = 0$. In this case, agent (-$2, 1$) is classified correctly. In particular, the agent (-$2, 1$) improves the loss from $1$ to $0$.
 \newline \newline
 
 \begin{figure}[H] \centering \begin{tikzpicture} [scale = 1] 
@@ -486,6 +494,86 @@ For the dataset $\left\{\left(x_{i1}, x_{i2}, y_{i}\right)\right\}_{i=1}^{5} = \
 \node[above right] at (0.0, 0.2){$\left(0, 0\right)$};
 \end{tikzpicture} \captionof{figure}{$2D$ Artificial Incentive Incompatible Example (Misreport)}\label{fig:2dam}
 \end{figure}
+To generalize the above observations, suppose the learner is a probabilistic classifier with parameters estimated by maximum likelihood, and the agents report their labels to maximize the classification probability of their true labels. Then the following two conditions guarantee that the classification is incentive compatible.
+\newline \newline
+\begin{df} \label{df:mono} 
+(Monotonic Condition) A multi-class probabilistic classifier is monotonic if, given a training set $S $, for any point $x $ with labels $a $ and $b, $
+\begin{align*}
+\dfrac{\mathbb{P}\left\{Y = a | x, w^\star \left(S\right)\right\}}{\mathbb{P}\left\{Y = b | x, w^\star \left(S\right)\right\}} &\geq  \dfrac{\mathbb{P}\left\{Y = a | x, w^\star \left(S \cup \left\{\left(x, y = a\right)\right\}\right)\right\}}{\mathbb{P}\left\{Y = b | x, w^\star \left(S \cup \left\{\left(x, y = a\right)\right\}\right)\right\}}.
+\end{align*}\end{df}
+The assumption says that the probability that $x $ is classified as $a $ increases when there is an additional point $\left(x , a \right)$ in the training set.
+\newline \newline
+\begin{df} \label{df:iia} 
+(Independence of Irrelevant Alternatives (IIA) Condition) A multi-class classifier is independent of irrelevant alternatives if, given a training set $S $, for any point $x $ and any pair of labels $a $ and $b, $
+\begin{align*}
+\dfrac{\mathbb{P}\left\{Y = a | x, w^\star \left(S\right)\right\}}{\mathbb{P}\left\{Y = b | x, w^\star \left(S\right)\right\}} &= \dfrac{\mathbb{P}\left\{Y = a | x, w^\star \left(S \cup \left\{\left(x', y' \notin \left\{a, b\right\}\right)\right\}\right)\right\}}{\mathbb{P}\left\{Y = b | x, w^\star \left(S \cup \left\{\left(x', y' \notin \left\{a, b\right\}\right)\right\}\right)\right\}}.
+\end{align*}\end{df}
+The assumption says that the ratio between the classification probabilities of $x $ of any two classes is not changed by adding a point at $x $ with a third class.
+\newline \newline
+Combining the two assumptions MC and IIA, we have that an agent with label $a $ cannot change the decision of $a $ vs $b $ by misreporting its label as a third class $c $. This observation is formalized in the following proposition.
+\newline \newline
+\begin{prop} \label{prop:margin} 
+A multi-class probabilistic classifier estimated by maximum likelihood is incentive compatible if it is monotonic and independent of irrelevant alternatives.
+\end{prop}
+\begin{proof} \label{proof:marginpf} 
+Fix a dataset $\left\{\left(x_{i}, y_{i}\right)\right\}_{i=1}^{n}$, let the maximum likelihood estimates in the case every agent report truthfully be,
+\begin{align*}
+w^\star  &= \arg\displaystyle\max_{w} \displaystyle\sum_{i'=1}^{n} \log\left(\mathbb{P}\left\{Y = y_{i'} | x_{i'}, w\right\}\right).
+\end{align*}
+Fix an agent $i $, her feature vector $x_{i}$, and fix other agents' reports, $\left(x_{-i}, y_{-i}\right)$, define the maximum likelihood estimate given the misreport of agent $i , y^{\dagger}_{i}$ as,
+\begin{align*}
+w^{\dagger} &= \arg\displaystyle\min_{w} \displaystyle\sum_{i'=1, i' \neq  i}^{n} \log\left(\mathbb{P}\left\{Y = y_{i'} | x_{i}\left(i'\right), w\right\}\right) + \log\left(\mathbb{P}\left\{Y = y^{\dagger}_{i} | x_{i}, w\right\}\right).
+\end{align*}
+Now suppose, for a contradiction, that agent $i $ prefers misreporting, assume the following incentive inequality,
+\begin{align*}
+\mathbb{P}\left\{Y = y_{i} | x_{i}, w^\star \right\} &> \mathbb{P}\left\{Y = y_{i} | x_{i}, w^{\dagger}\right\}.
+\end{align*}
+If there are only two classes, then by symmetry,
+\begin{align*}
+\mathbb{P}\left\{Y = y^{\dagger}_{i} | x_{i}, w^\star \right\} &< \mathbb{P}\left\{Y = y^{\dagger}_{i} | x_{i}, w^{\dagger}\right\}.
+\end{align*}
+If there are more than two classes, fix a third $y'_{i} \notin \left\{y_{i}, y^{\dagger}_{i}\right\}$, and define an intermediate maximum likelihood estimate from removing the point $\left(x_{i}, y_{i}\right)$,
+\begin{align*}
+w' &= \arg\displaystyle\min_{w} \displaystyle\sum_{i'=1, i' \neq  i}^{n} \log\left(\mathbb{P}\left\{Y = y_{i'} | x_{i}\left(i'\right), w\right\}\right),
+\end{align*}
+then the Monotonic Condition implies,
+\begin{align*}
+\dfrac{\mathbb{P}\left\{Y = y_{i} | x_{i}, w^\star \right\}}{\mathbb{P}\left\{Y = y'_{i} | x_{i}, w^\star \right\}} &\leq  \dfrac{\mathbb{P}\left\{Y = y_{i} | x_{i}, w'\right\}}{\mathbb{P}\left\{Y = y'_{i} | x_{i}, w'\right\}},
+\end{align*}
+and the IIA Condition implies,
+\begin{align*}
+\dfrac{\mathbb{P}\left\{Y = y_{i} | x_{i}, w'\right\}}{\mathbb{P}\left\{Y = y'_{i} | x_{i}, w'\right\}} &= \dfrac{\mathbb{P}\left\{Y = y_{i} | x_{i}, w^{\dagger}\right\}}{\mathbb{P}\left\{Y = y'_{i} | x_{i}, w^{\dagger}\right\}}.
+\end{align*}
+Combining the above two inequalities with the incentive inequality, we have,
+\begin{align*}
+\mathbb{P}\left\{Y = y'_{i} | x_{i}, w^\star \right\} &> \mathbb{P}\left\{Y = y'_{i} | x_{i}, w^{\dagger}\right\}.
+\end{align*}
+Note that the above inequality is true for all $y'_{i} \notin \left\{y_{i}, y^{\dagger}_{i}\right\}$, summing over all such $y'_{i}$ results in,
+\begin{align*}
+\displaystyle\sum_{y \notin \left\{y_{i}, y^{\dagger}_{i}\right\}} \mathbb{P}\left\{Y = y'_{i} | x_{i}, w^\star \right\} &> \displaystyle\sum_{y \notin \left\{y_{i}, y^{\dagger}_{i}\right\}} \mathbb{P}\left\{Y = y'_{i} | x_{i}, w^{\dagger}\right\},
+\end{align*}
+given that the class probabilities sum up to $1$,
+\begin{align*}
+1 - \mathbb{P}\left\{Y = y_{i} | x_{i}, w^\star \right\} - \mathbb{P}\left\{Y = y^{\dagger}_{i} | x_{i}, w^\star \right\} &> 1 - \mathbb{P}\left\{Y = y_{i} | x_{i}, w^{\dagger}\right\} - \mathbb{P}\left\{Y = y^{\dagger}_{i} | x_{i}, w^{\dagger}\right\},
+\end{align*}
+and using the incentive inequality again,
+\begin{align*}
+\mathbb{P}\left\{Y = y^{\dagger}_{i} | x_{i}, w^\star \right\} &< \mathbb{P}\left\{Y = y^{\dagger}_{i} | x_{i}, w^{\dagger}\right\}.
+\end{align*}
+Now, due to the optimality of $h^{\dagger,}$
+\begin{align*}
+&  \displaystyle\sum_{i'=1, i' \neq  i}^{n} \log\left(\mathbb{P}\left\{Y = y_{i'} | x_{i'}, w^{\dagger}\right\}\right) + \log\left(\mathbb{P}\left\{Y = y^{\dagger}_{i} | x_{i}, w^{\dagger}\right\}\right)
+\\ &\leq  \displaystyle\sum_{i'=1, i' \neq  i}^{n} \log\left(\mathbb{P}\left\{Y = y_{i'} | x_{i'}, w^\star \right\}\right) + \log\left(\mathbb{P}\left\{Y = y^{\dagger}_{i} | x_{i}, w^\star \right\}\right),
+\end{align*}
+using the above inequalities, the comparison can be simplified to,
+\begin{align*}
+\displaystyle\sum_{i'=1, i' \neq  i}^{n} \log\left(\mathbb{P}\left\{Y = y_{i'} | x_{i'}, w^{\dagger}\right\}\right) &< \displaystyle\sum_{i'=1, i' \neq  i}^{n} \log\left(\mathbb{P}\left\{Y = y_{i'} | x_{i'}, w^\star \right\}\right),
+\\ \displaystyle\sum_{i'=1}^{n} \log\left(\mathbb{P}\left\{Y = y_{i'} | x_{i'}, w^{\dagger}\right\}\right) &< \displaystyle\sum_{i'=1}^{n} \log\left(\mathbb{P}\left\{Y = y_{i'} | x_{i'}, w^\star \right\}\right),
+\end{align*}
+which is a contradiction to the optimality of $w^\star $.
+\newline \newline\end{proof}
+A similar result can be obtained for empirical risk minimization. We could either add an assumption that the loss function can be normalized so that the sum is $1$ so it behaves the same way as a probabilistic classifier, or we could use stronger Monotonic and IIA Conditions.
+\newline \newline
 \bibliographystyle{te}
 \bibliography{cs}
 
