--- a/Other/Incentive_Compatible_Logistic_Regression.tex
+++ b/Other/Incentive_Compatible_Logistic_Regression.tex
@@ -389,6 +389,11 @@ Similar to the above derivation (and also as a special case of a Bayes estimator
 \\ &= \mathbb{P}\left\{Y = y_{i}, X = x_{i} | w^\star \left(y^{\dagger}_{i}\right)\right\} + \dfrac{1}{n_{y}} K\left(0\right)
 \\ &\leq  \mathbb{P}\left\{Y = y_{i}, X = x_{i} | w^\star \left(y^{\dagger}_{i}\right)\right\}.
 \end{align*}
+The above results will be referenced as the following lemma.
+\newline \newline
+\begin{lem} \label{lem:kde} 
+Kernel Density Estimators are incentive compatible.
+\newline \newline\end{lem}
 K-Nearest Neighbor is a special case of this with a uniform kernel.
 \newline \newline
 
@@ -522,7 +527,7 @@ w^\star  &= \arg\displaystyle\max_{w} \displaystyle\sum_{i'=1}^{n} \log\left(\ma
 \end{align*}
 Fix an agent $i $, her feature vector $x_{i}$, and fix other agents' reports, $\left(x_{-i}, y_{-i}\right)$, define the maximum likelihood estimate given the misreport of agent $i , y^{\dagger}_{i}$ as,
 \begin{align*}
-w^{\dagger} &= \arg\displaystyle\min_{w} \displaystyle\sum_{i'=1, i' \neq  i}^{n} \log\left(\mathbb{P}\left\{Y = y_{i'} | x_{i}\left(i'\right), w\right\}\right) + \log\left(\mathbb{P}\left\{Y = y^{\dagger}_{i} | x_{i}, w\right\}\right).
+w^{\dagger} &= \arg\displaystyle\max_{w} \displaystyle\sum_{i'=1, i' \neq  i}^{n} \log\left(\mathbb{P}\left\{Y = y_{i'} | x_{i'}, w\right\}\right) + \log\left(\mathbb{P}\left\{Y = y^{\dagger}_{i} | x_{i}, w\right\}\right).
 \end{align*}
 Now suppose, for a contradiction, that agent $i $ prefers misreporting, assume the following incentive inequality,
 \begin{align*}
@@ -534,7 +539,7 @@ If there are only two classes, then by symmetry,
 \end{align*}
 If there are more than two classes, fix a third $y'_{i} \notin \left\{y_{i}, y^{\dagger}_{i}\right\}$, and define an intermediate maximum likelihood estimate from removing the point $\left(x_{i}, y_{i}\right)$,
 \begin{align*}
-w' &= \arg\displaystyle\min_{w} \displaystyle\sum_{i'=1, i' \neq  i}^{n} \log\left(\mathbb{P}\left\{Y = y_{i'} | x_{i}\left(i'\right), w\right\}\right),
+w' &= \arg\displaystyle\max_{w} \displaystyle\sum_{i'=1, i' \neq  i}^{n} \log\left(\mathbb{P}\left\{Y = y_{i'} | x_{i'}, w\right\}\right),
 \end{align*}
 then the Monotonic Condition implies,
 \begin{align*}
@@ -572,8 +577,108 @@ using the above inequalities, the comparison can be simplified to,
 \end{align*}
 which is a contradiction to the optimality of $w^\star $.
 \newline \newline\end{proof}
+The assumptions Definition \ref{df:mono} (MC) and Definition \ref{df:iia} (IIA) can be significantly simplified for a separable class of the classifiers.
+\newline \newline
+\begin{df} \label{df:sep} 
+A probabilistic classifier is separable if the parameters $w^\star $ can be partitioned into $K $ classes, $w^\star _{1}, w^\star _{2}, ..., w^\star _{K}$, one set of parameters for each class, such that for given training sets $S $ and $S'$, if,
+\begin{align*}
+w^\star _{y}\left(S\right) &= w^\star _{y}\left(S'\right),
+\end{align*}
+then for any point $x $ and any label $y, $
+\begin{align*}
+\mathbb{P}\left\{Y = y | x, w^\star \left(S\right)\right\} &= \mathbb{P}\left\{Y = y | x, w^\star \left(S'\right)\right\}.
+\end{align*}\end{df}
+For separable classifiers, Definition \ref{df:iia} (IIA) is always satisfied since we have, for any label $a, $
+\begin{align*}
+\mathbb{P}\left\{Y = a|x, w^\star \left(S\right)\right\} &= \mathbb{P}\left\{Y = a|x, w^\star _{a}\left(S\right)\right\} = \mathbb{P}\left\{Y = a|x, w^\star _{a}\left(S \cup \left\{\left(x, y \neq  a\right)\right\}\right)\right\},
+\end{align*}
+and Definition \ref{df:mono} (MC) is reduced to the following inequality,
+\begin{align*}
+\mathbb{P}\left\{Y = a | x, w^\star \left(S\right)\right\} &\geq  \mathbb{P}\left\{Y = a | x, w^\star \left(S \cup \left\{\left(x, y = a\right)\right\}\right)\right\},
+\end{align*}
+which is always true implied by the difference between the optimality conditions of $w^\star \left(S\right)$ and $w^\star \left(S \cup \left\{\left(x, y = a\right)\right\}\right)$.
+\newline \newline
+\begin{cor} \label{cor:sepmargin} 
+A separable multi-class probabilistic classifier estimated by maximum likelihood is incentive compatible.
+\newline \newline\end{cor}
+It immediately follows Proposition \ref{prop:bc} and Lemma \ref{lem:kde} hold, because the parameters for different classes are estimated separately.
+\newline \newline
 A similar result can be obtained for empirical risk minimization. We could either add an assumption that the loss function can be normalized so that the sum is $1$ so it behaves the same way as a probabilistic classifier, or we could use stronger Monotonic and IIA Conditions.
 \newline \newline
+\begin{df} \label{df:nrml} 
+(Normalized Loss) A loss function $\ell$ is normalized if given a hypothesis $h $, for any point $x, $
+\begin{align*}
+\displaystyle\sum_{y} \ell\left(h, x, y\right) &= C , \text{\;constant\;} .
+\end{align*}\end{df}
+\begin{df} \label{df:monoerm} 
+(Monotonic Condition for ERM) A multi-class classifier obtained from empirical risk minimization is monotonic if, given a training set $S $, for any point $x $ with labels $a $ and $b, $
+\begin{align*}
+\dfrac{\ell\left(h^\star \left(S\right), x, y = a\right)}{\ell\left(h^\star \left(S\right), x, y = b\right)} &\geq  \dfrac{\ell\left(h^\star \left(S \cup \left\{\left(x, y = a\right)\right\}\right), x, y = a\right)}{\ell\left(h^\star \left(S \cup \left\{\left(x, y = a\right)\right\}\right), x, y = b\right)}.
+\end{align*}\end{df}
+\begin{df} \label{df:iiaerm} 
+(IIA Condition for ERM) A multi-class classifier obtained from empirical risk minimization is independent of irrelevant alternatives if, given a training set $S $, for any point $x $ and any pair of labels $a $ and $b, $
+\begin{align*}
+\dfrac{\ell\left(h^\star \left(S\right), x, y = a\right)}{\ell\left(h^\star \left(S\right), x, y = b\right)} &= \dfrac{\ell\left(h^\star \left(S \cup \left\{\left(x', y' \notin \left\{a, b\right\}\right)\right\}\right), x, y = a\right)}{\ell\left(h^\star \left(S \cup \left\{\left(x', y' \notin \left\{a, b\right\}\right)\right\}\right), x, y = b\right)}.
+\end{align*}\end{df}
+\begin{prop} \label{prop:marginerm} 
+A multi-class classifier using empirical risk minimization with a normalized loss function is incentive compatible if it is monotonic and independent of irrelevant alternatives.
+\end{prop}
+\begin{proof} \label{proof:marginermpf} 
+For a fixed dataset $\left\{\left(x_{i}, y_{i}\right)\right\}_{i=1}^{n}$, and the hypothesis class $\mathcal{H}$, let the optimal classifier in the case every agent report truthfully be,
+\begin{align*}
+h^\star  &= \arg\displaystyle\min_{h \in \mathcal{H}} \displaystyle\sum_{i'=1}^{n} \ell\left(h, x_{i'}, y_{i'}\right).
+\end{align*}
+Fix an agent $i $, her feature vector $x_{i}$, and fix other agents' reports, $\left(x_{-i}, y_{-i}\right)$, define the optimal classifier given the classifier $h $ and the misreport of agent $i , y^{\dagger}_{i}$ as,
+\begin{align*}
+h^{\dagger} &= \arg\displaystyle\min_{h \in \mathcal{H}} \displaystyle\sum_{i'=1, i' \neq  i}^{n} \ell\left(h, x_{i'}, y_{i'}\right) + \ell\left(h, x_{i}, y^{\dagger}_{i}\right).
+\end{align*}
+Now suppose, for a contradiction, that agent $i $ prefers misreporting, assume the following incentive inequality,
+\begin{align*}
+\ell\left(h^\star , x_{i}, y_{i}\right) &> \ell\left(h^{\dagger}, x_{i}, y_{i}\right).
+\end{align*}
+If there are only two classes, then by symmetry,
+\begin{align*}
+\ell\left(h^\star , x_{i}, y^{\dagger}_{i}\right) &< \ell\left(h^{\dagger}, x_{i}, y^{\dagger}_{i}\right).
+\end{align*}
+If there are more than two classes, fix a third $y'_{i} \notin \left\{y_{i}, y^{\dagger}_{i}\right\}$, and define an intermediate maximum likelihood estimate from removing the point $\left(x_{i}, y_{i}\right)$,
+\begin{align*}
+h' &= \arg\displaystyle\min_{h \in \mathcal{H}} \displaystyle\sum_{i' = 1, i' \neq  i}^{n} \ell\left(h, x_{i'}, y_{i'}\right),
+\end{align*}
+then the Monotonic Condition for ERM implies,
+\begin{align*}
+\dfrac{\ell\left(h^\star , x_{i}, y_{i}\right)}{\ell\left(h^\star , x_{i}, y'_{i}\right)} &\leq  \dfrac{\ell\left(h', x_{i}, y_{i}\right)}{\ell\left(h', x_{i}, y'_{i}\right)},
+\end{align*}
+and the IIA Condition implies,
+\begin{align*}
+\dfrac{\ell\left(h', x_{i}, y_{i}\right)}{\ell\left(h', x_{i}, y'_{i}\right)} &= \dfrac{\ell\left(h^{\dagger}, x_{i}, y_{i}\right)}{\ell\left(h^{\dagger}, x_{i}, y'_{i}\right)}.
+\end{align*}
+Combining the above two inequalities with the incentive inequality, we have,
+\begin{align*}
+\ell\left(h^\star , x_{i}, y'_{i}\right) &> \ell\left(h^{\dagger}, x_{i}, y'_{i}\right).
+\end{align*}
+Note that the above inequality is true for all $y'_{i} \notin \left\{y_{i}, y^{\dagger}_{i}\right\}$, summing over all such $y'_{i}$ results in,
+\begin{align*}
+\displaystyle\sum_{y \notin \left\{y_{i}, y^{\dagger}_{i}\right\}} \ell\left(h^\star , x_{i}, y'_{i}\right) &> \displaystyle\sum_{y \notin \left\{y_{i}, y^{\dagger}_{i}\right\}} \ell\left(h^{\dagger}, x_{i}, y'_{i}\right),
+\end{align*}
+and given the losses are normalized,
+\begin{align*}
+C  - \ell\left(h^\star , x_{i}, y_{i}\right) - \ell\left(h^\star , x_{i}, y^{\dagger}_{i}\right) &> C  - \ell\left(h^{\dagger}, x_{i}, y_{i}\right) - \ell\left(h^{\dagger}, x_{i}, y^{\dagger}_{i}\right),
+\end{align*}
+and using the incentive inequality again,
+\begin{align*}
+\ell\left(h^\star , x_{i}, y^{\dagger}_{i}\right) &< \ell\left(h^{\dagger}, x_{i}, y^{\dagger}_{i}\right).
+\end{align*}
+Now, due to the optimality of $h^{\dagger,}$
+\begin{align*}
+\displaystyle\sum_{i'=1, i' \neq  i}^{n} \ell\left(h^{\dagger}, x_{i'}, y_{i'}\right) + \ell\left(h^{\dagger}, x_{i}, y^{\dagger}_{i}\right) &\leq  \displaystyle\sum_{i'=1, i' \neq  i}^{n} \ell\left(h^\star , x_{i'}, y_{i'}\right) + \ell\left(h^\star , x_{i}, y^{\dagger}_{i}\right),
+\end{align*}
+using the above inequalities, the comparison can be simplified to,
+\begin{align*}
+\displaystyle\sum_{i'=1, i' \neq  i}^{n} \ell\left(h^{\dagger}, x_{i'}, y_{i'}\right) &\leq  \displaystyle\sum_{i'=1, i' \neq  i}^{n} \ell\left(h^\star , x_{i'}, y_{i'}\right),
+\\ \displaystyle\sum_{i'=1}^{n} \ell\left(h^{\dagger}, x_{i'}, y_{i'}\right) &\leq  \displaystyle\sum_{i'=1}^{n} \ell\left(h^\star , x_{i'}, y_{i'}\right),
+\end{align*}
+which is a contradiction to the optimality of $h^\star $.
+\newline \newline\end{proof}
 \bibliographystyle{te}
 \bibliography{cs}
 
